# wiki-cli

./: .gitignore  README.md  SKILLS.md  pyproject.toml  test_ingest.py  test_ingest_compare.sh  test_ingest_merge.py
scripts/: batch_ingest_all.sh  wiki-mcp-watchdog.sh
src/wiki_cli/: main.py
tests/: test_cascade_delete.py  test_dedup.py  test_ingest_parse.py  test_project_mutex.py
wiki/: index.md  overview.md
wiki/concepts/: adaptive-angriffe.md  adaptive-attacks.md  adversarial-suffix-attack.md  adversarial-suffix.md  adversarielle-suffixe.md  alignment-finetuning.md  alignment-pipeline.md  alt-gorev-isleyiciler.md  angriffserfolgsrate.md  attack-success-rate.md  benchmarks-for-stateful-defenses.md  bit-flip-attack.md  bsd.md  buyuk-dil-modelleri.md  cautionary-warning-defense.md  chain-of-thought.md  competing-objectives-attack.md  composition-attack.md  composition-attacks.md  context-window.md  decomposition-attacks.md  dis-api-cagrilari.md  element-lookup-by-position.md  few-shot-jailbreaking.md  few-shot-prompting.md  frontier-models.md  gcg.md  greedy-coordinate-gradient.md  harmful-score.md  hierarsik-ayristirma.md  in-context-defense.md  in-context-learning.md  induction-heads.md  jailbreak-composition.md  jailbreak-judge.md  jailbreaking.md  jailbreaks.md  least-to-most-prompting.md  llm-jailbreak.md  long-context-windows.md  (+26 more)
wiki/entities/: AdvBench.md  HarmBench.md  SEMA.md  adv-ner.md  advbench.md  akash-srivastava.md  aldo-pareja.md  allen-institute-for-ai.md  anthropic.md  ashish-sabharwal.md  askg.md  australian-national-university.md  autodan.md  (+205 more)
(+65 files in other folders)
